# dp_get_print_jul2025

./: .gitignore  Dockerfile  README.md  compose.yaml
docker_files/: Dockerfile
docker_files/python-app-container/: .bashrc
python-app/: .env  .gitignore  fetchers_list.py  get_data.py  print_data.py  pyproject.toml
python-app/datafetchers/: base_fetcher.py  fetcher_utils.py  statistictimes_fetcher.py  wikipedia_fetcher.py
python-app/db/: db.py
python-app/models/: country.py  region.py
python-app/test/: test_datafetcher.py  test_datafetcher_async.py  test_statistictimefetcher.py  test_wikipediafetcher.py  utils_for_test.py
python-app/test/test_data/: statistictimes_page_28Jul2025.html  wiki_countries_23Jul2025.html
